User DB and login works now

--- a/src/NancyBlog.Domain/NancyBlog.Domain.csproj
+++ b/src/NancyBlog.Domain/NancyBlog.Domain.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Entity.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="UserAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
