--- a/src/NancyBlog.Web/NancyBlog.Web.csproj
+++ b/src/NancyBlog.Web/NancyBlog.Web.csproj
@@ -81,6 +81,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -90,15 +94,16 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemoUserIdentity.cs" />
+    <Compile Include="Auth.cs" />
+    <Compile Include="BlogUserIdentity.cs" />
     <Compile Include="FormsAuthBootstrapper.cs" />
+    <Compile Include="Infra\DbSetup.cs" />
     <Compile Include="Infra\Repository.cs" />
     <Compile Include="Infra\UnitOfWork.cs" />
     <Compile Include="MainModule.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdminModule.cs" />
-    <Compile Include="UserDatabase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -116,9 +121,7 @@
       <Name>NancyBlog.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
