--- a/src/NancyBlog.Web/Web.config
+++ b/src/NancyBlog.Web/Web.config
@@ -4,6 +4,21 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  </configSections>
+  <connectionStrings>
+    <add name="NancyBlogDbContext" 
+         connectionString="Data Source=|DataDirectory|NancyBlog.sdf" 
+         providerName="System.Data.SqlServerCe.4.0" />
+    <!-- 
+    In case you want to use SQL Server, use this conn string instead
+    <add name="NancyBlogDbContext" 
+         connectionString="Data Source=.\SQLEXPRESS;database=NancyBlog;user id=sa;password=qwe123"
+         providerName="System.Data.SqlServer" />
+      -->
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <buildProviders>
@@ -24,4 +39,11 @@
   <appSettings>
     <add key="webPages:Enabled" value="false" />
   </appSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="Data Source=.\SQLEXPRESS; Integrated Security=True; MultipleActiveResultSets=True" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
