--- a/src/NancyBlog.Web/packages.config
+++ b/src/NancyBlog.Web/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="4.3.1" />
+  <package id="jQuery" version="1.7.2" />
   <package id="Nancy" version="0.11.0" />
   <package id="Nancy.Authentication.Forms" version="0.11.0" />
   <package id="Nancy.Hosting.Aspnet" version="0.11.0" />
   <package id="Nancy.Viewengines.Razor" version="0.11.0" />
+  <package id="Twitter.Bootstrap" version="2.0.3" />
 </packages>
