--- a/src/NancyBlog.Web/Web.config
+++ b/src/NancyBlog.Web/Web.config
@@ -22,6 +22,8 @@
   </connectionStrings>
   
   <system.web>
+    <customErrors mode="Off">
+    </customErrors> 
     <compilation debug="true" targetFramework="4.0">
       <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
@@ -34,6 +36,8 @@
   </system.web>
   
   <system.webServer>
+    <asp scriptErrorSentToBrowser="true"/>
+    <httpErrors errorMode="Detailed"/> 
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
