--- a/src/NancyBlog.Web/NancyBlog.Web.csproj
+++ b/src/NancyBlog.Web/NancyBlog.Web.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdminModule.cs" />
+    <Compile Include="YsodErrorHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
