--- a/src/NancyBlog.Web/Web.config
+++ b/src/NancyBlog.Web/Web.config
@@ -22,6 +22,7 @@
   </connectionStrings>
   
   <system.web>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.0">
       <buildProviders>
         <add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
