Use EntityFramework.Migrations

--- a/src/NancyBlog.Web/Web.config
+++ b/src/NancyBlog.Web/Web.config
@@ -8,11 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </configSections>
-  
   <connectionStrings>
-    <add name="NancyBlogDbContext" 
-         connectionString="Data Source=|DataDirectory|NancyBlog.sdf" 
-         providerName="System.Data.SqlServerCe.4.0" />
+    <add name="NancyBlogDbContext" connectionString="Data Source=|DataDirectory|NancyBlog.sdf" providerName="System.Data.SqlServerCe.4.0" />
     <!-- 
     In case you want to use SQL Server, use this conn string instead
     <add name="NancyBlogDbContext" 
@@ -20,7 +17,6 @@
          providerName="System.Data.SqlServer" />
       -->
   </connectionStrings>
-  
   <system.web>
     <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.0">
@@ -33,9 +29,8 @@
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </httpHandlers>
   </system.web>
-  
   <system.webServer>
-    <asp scriptErrorSentToBrowser="true"/>
+    <asp scriptErrorSentToBrowser="true" />
     <httpErrors errorMode="Custom" existingResponse="PassThrough" />
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
@@ -52,4 +47,12 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
