--- a/src/NancyBlog.Web/NancyBlog.Web.csproj
+++ b/src/NancyBlog.Web/NancyBlog.Web.csproj
@@ -95,8 +95,8 @@
     <Compile Include="BlogUserIdentity.cs" />
     <Compile Include="FormsAuthBootstrapper.cs" />
     <Compile Include="Infra\NancyBlogDbContext.cs" />
-    <Compile Include="Infra\NancyBlogDbInitializer.cs" />
     <Compile Include="MainModule.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdminModule.cs" />
