--- a/src/NancyBlog.Web/Web.config
+++ b/src/NancyBlog.Web/Web.config
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </configSections>
   <connectionStrings>
-    <add name="NancyBlogDbContext" connectionString="Data Source=|DataDirectory|NancyBlog.sdf" providerName="System.Data.SqlServerCe.4.0" />
-    <!-- 
+    <add name="NancyBlogDbContext"
+         connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|NancyBlog.mdf;Initial Catalog=NancyBlog;Integrated Security=True;User Instance=True" 
+         providerName="System.Data.SqlClient" />
+    
+    <!-- add name="NancyBlogDbContext" connectionString="Data Source=|DataDirectory|NancyBlog.sdf" providerName="System.Data.SqlServerCe.4.0" />
+    
     In case you want to use SQL Server, use this conn string instead
     <add name="NancyBlogDbContext" 
          connectionString="Data Source=.\SQLEXPRESS;database=NancyBlog;user id=sa;password=qwe123"
